--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.14.0",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
+    "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
